# hdl4se

./: CMakeLists.txt  LICENSE.md
examples/: CMakeLists.txt
examples/counter/: CMakeLists.txt
examples/counter/src/: counter.c  main.c
examples/counter/verilog/: main.v  main_asm.v
hdl4secell/: CMakeLists.txt
hdl4secell/include/: hdl4secell.h
hdl4secell/src/: hdl4secell.c
hdl4secell/verilog/: hdl4secell.v
hdl4sesim/: CMakeLists.txt
preprocess/: CMakeLists.txt  filestack.h  preprocess.c  preprocess.h  stringlist.h  verilog_preprocess.c  verilog_preprocess.h
testpreprocess/: CMakeLists.txt  testpreprocess.c
